[package]
name = "lib-core"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = { version = "0.30.12", features = ["android-native-activity"] }
env_logger = "0.10"
anyhow = "1.0"
pollster = "0.3"
log = "0.4"

wgpu = "26.0.1"

lib-render = { path = "../lib-render" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "26.0.1", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"